fix responsive and add favicon

--- a/static/assets/site/css/main.css
+++ b/static/assets/site/css/main.css
@@ -21,6 +21,10 @@ canvas {
     -ms-user-select: none;
 }
 
+.canvas-holder {
+    max-width: 400px;
+}
+
 .full-height {
     min-height: 100% !important;
 }
