--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,16 +11,16 @@
     <main>
         <div class="container-fluid full-height toggle-bg">
             <div class="d-flex flex-column p-5">
-                <div class="row mb-5" id="graphs">
-                    <div class="col canvas-holder">
+                <div class="row mb-5 justify-content-center" id="graphs">
+                    <div class="col-xs-12 col-sm-12 col-md-4 canvas-holder">
                         <h5 class="toggle-text text-center mb-4">Consumo de CPU</h5>
                         <canvas id="cpu-gauge"></canvas>
                     </div>
-                    <div class="col canvas-holder">
+                    <div class="col-xs-12 col-sm-12 col-md-4 canvas-holder">
                         <h5 class="toggle-text text-center mb-4">Consumo de memoria</h5>
                         <canvas id="memory-gauge"></canvas>
                     </div>
-                    <div class="col canvas-holder">
+                    <div class="col-xs-12 col-sm-12 col-md-4 canvas-holder">
                         <h5 class="toggle-text text-center mb-4">Consumo de disco</h5>
                         <canvas id="disk-gauge"></canvas>
                     </div>
