--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ appName }} - Inicio</title>
+<link rel="icon" type="image/x-icon" href="/static/public/favicon/favicon.ico">
 
 <!-- Styles -->
 <link rel="stylesheet" href="/static/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
