add get resources method

--- a/templates/layouts/scripts.html
+++ b/templates/layouts/scripts.html
@@ -4,3 +4,4 @@
 <script src="/static/assets/chartjs/chartjs-gauge.js"></script>
 <script src="/static/assets/site/js/gauge.js"></script>
 <script src="/static/assets/site/js/main.js"></script>
+<script src="/static/assets/site/js/ajax.js"></script>
