--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg toggle-bg toggle-text toggle-border" id="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#" onclick="navigate('/')">
             <img class="brand-image" src="/static/public/images/brand-image.png" alt="{{ appName }}">
             <span class="brand-name toggle-text">{{ appName }}</span>
         </a>
@@ -14,7 +14,7 @@
                     <a class="nav-link toggle-text" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link toggle-text" href="#">Documentación</a>
+                    <a class="nav-link toggle-text" href="#">MiniBuster</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link toggle-text" href="https://github.com/Daireto/MiniBuster">Github</a>
