check browser before start

--- a/templates/maintenance/maintenance.html
+++ b/templates/maintenance/maintenance.html
@@ -18,85 +18,102 @@
                     <div class="col">
                         <h6>Sistema</h6>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="system-temp_files" type="checkbox" aria-label="Limpiar archivos temporales">
+                            <input class="form-check-input" id="system-temp_files" type="checkbox"
+                                aria-label="Limpiar archivos temporales">
                             <label for="system-temp_files" class="form-check-label">Temporales</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="system-recycle_bin" type="checkbox" aria-label="Limpiar papelera de reciclaje">
+                            <input class="form-check-input" id="system-recycle_bin" type="checkbox"
+                                aria-label="Limpiar papelera de reciclaje">
                             <label for="system-recycle_bin" class="form-check-label">Papelera</label>
                         </div>
                     </div>
                     <div class="col">
                         <h6>Chrome</h6>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="chrome-history" type="checkbox" aria-label="Limpiar historial de Chrome">
+                            <input class="form-check-input" id="chrome-history" type="checkbox"
+                                aria-label="Limpiar historial de Chrome">
                             <label for="chrome-history" class="form-check-label">Historial</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="chrome-cache" type="checkbox" aria-label="Limpiar la caché de Chrome">
+                            <input class="form-check-input" id="chrome-cache" type="checkbox"
+                                aria-label="Limpiar la caché de Chrome">
                             <label for="chrome-cache" class="form-check-label">Caché</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="chrome-cookies" type="checkbox" aria-label="Limpiar las cookies de Chrome">
+                            <input class="form-check-input" id="chrome-cookies" type="checkbox"
+                                aria-label="Limpiar las cookies de Chrome">
                             <label for="chrome-cookies" class="form-check-label">Cookies</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="chrome-extensions" type="checkbox" aria-label="Limpiar las extensiones de Chrome">
+                            <input class="form-check-input" id="chrome-extensions" type="checkbox"
+                                aria-label="Limpiar las extensiones de Chrome">
                             <label for="chrome-extensions" class="form-check-label">Extensiones</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="chrome-passwords" type="checkbox" aria-label="Limpiar las contraseñas de Chrome">
+                            <input class="form-check-input" id="chrome-passwords" type="checkbox"
+                                aria-label="Limpiar las contraseñas de Chrome">
                             <label for="chrome-passwords" class="form-check-label">Contraseñas</label>
                         </div>
                     </div>
                     <div class="col">
                         <h6>Edge</h6>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="edge-history" type="checkbox" aria-label="Limpiar historial de Edge">
+                            <input class="form-check-input" id="edge-history" type="checkbox"
+                                aria-label="Limpiar historial de Edge">
                             <label for="edge-history" class="form-check-label">Historial</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="edge-cache" type="checkbox" aria-label="Limpiar la caché de Edge">
+                            <input class="form-check-input" id="edge-cache" type="checkbox"
+                                aria-label="Limpiar la caché de Edge">
                             <label for="edge-cache" class="form-check-label">Caché</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="edge-cookies" type="checkbox" aria-label="Limpiar las cookies de Edge">
+                            <input class="form-check-input" id="edge-cookies" type="checkbox"
+                                aria-label="Limpiar las cookies de Edge">
                             <label for="edge-cookies" class="form-check-label">Cookies</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="edge-extensions" type="checkbox" aria-label="Limpiar las extensiones de Edge">
+                            <input class="form-check-input" id="edge-extensions" type="checkbox"
+                                aria-label="Limpiar las extensiones de Edge">
                             <label for="edge-extensions" class="form-check-label">Extensiones</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="edge-passwords" type="checkbox" aria-label="Limpiar las contraseñas de Edge">
+                            <input class="form-check-input" id="edge-passwords" type="checkbox"
+                                aria-label="Limpiar las contraseñas de Edge">
                             <label for="edge-passwords" class="form-check-label">Contraseñas</label>
                         </div>
                     </div>
                     <div class="col">
                         <h6>Opera</h6>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="opera-history" type="checkbox" aria-label="Limpiar historial de Opera">
+                            <input class="form-check-input" id="opera-history" type="checkbox"
+                                aria-label="Limpiar historial de Opera">
                             <label for="opera-history" class="form-check-label">Historial</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="opera-cache" type="checkbox" aria-label="Limpiar la caché de Opera">
+                            <input class="form-check-input" id="opera-cache" type="checkbox"
+                                aria-label="Limpiar la caché de Opera">
                             <label for="opera-cache" class="form-check-label">Caché</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="opera-cookies" type="checkbox" aria-label="Limpiar las cookies de Opera">
+                            <input class="form-check-input" id="opera-cookies" type="checkbox"
+                                aria-label="Limpiar las cookies de Opera">
                             <label for="opera-cookies" class="form-check-label">Cookies</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="opera-extensions" type="checkbox" aria-label="Limpiar las extensiones de Opera">
+                            <input class="form-check-input" id="opera-extensions" type="checkbox"
+                                aria-label="Limpiar las extensiones de Opera">
                             <label for="opera-extensions" class="form-check-label">Extensiones</label>
                         </div>
                         <div class="form-check ms-4">
-                            <input class="form-check-input" id="opera-passwords" type="checkbox" aria-label="Limpiar las contraseñas de Opera">
+                            <input class="form-check-input" id="opera-passwords" type="checkbox"
+                                aria-label="Limpiar las contraseñas de Opera">
                             <label for="opera-passwords" class="form-check-label">Contraseñas</label>
                         </div>
                     </div>
                     <div class="col-12 mt-5 text-center">
-                        <button class="btn btn-primary" onclick="sendData()">Realizar limpieza</button>
+                        <button class="btn btn-primary" onclick="submitData()">Realizar limpieza</button>
                     </div>
                 </div>
             </div>
@@ -137,6 +154,23 @@
                         <h6>Cantidad de archivos ignorados <i class="fab fa-circle-info"></i></h6>
                         <p id="skipped"></p>
                         <button class="btn btn-primary" onclick="navigate('/')">Regresar</button>
+                    </div>
+                </div>
+            </div>
+            <div id="confirm-modal" class="modal fade" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">¿Está seguro de querer limpiar este navegador?</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Esta operación cerrará el navegador. Una vez cerrado, se recomienda esperar entre 1 a 2 minutos antes de abrirlo nuevamente.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="sendData()">Realizar limpieza</button>
+                        </div>
                     </div>
                 </div>
             </div>
