--- a/templates/maintenance/maintenance.html
+++ b/templates/maintenance/maintenance.html
@@ -10,7 +10,7 @@
     {% include "layouts/navbar.html" %}
 
     <main>
-        <div class="container-fluid full-height toggle-bg">
+        <div id="maintenance-view-container" class="container-fluid full-height toggle-bg">
             {% include "layouts/spinner.html" %}
             <div id="delete-config-form" class="toggle-text px-5 mx-5">
                 <h5 class="py-4">Seleccione los elementos que desea eliminar:</h5>
@@ -119,7 +119,7 @@
             </div>
             <div id="maintenance-result" class="toggle-text px-5">
                 <div class="row">
-                    <div class="col-8 pt-5">
+                    <div class="d-none d-md-block col-8 pt-5">
                         <h5 class="text-center mb-3">Lista de archivos eliminados</h5>
                         <div id="deleted-files" class="overflow-auto">
                             <div id="deleted-temp-files-container" class="mb-3">
@@ -147,12 +147,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 text-center pt-5">
+                    <div class="col-12 col-md-4 text-center pt-5">
                         <h5 class="mb-3">Total</h5>
-                        <h6>Cantidad de archivos eliminados</h6>
-                        <p id="deleted"></p>
-                        <h6>Cantidad de archivos ignorados <i class="fab fa-circle-info"></i></h6>
-                        <p id="skipped"></p>
+                        <div class="mb-2">
+                            <h6>Cantidad de archivos eliminados</h6>
+                            <div id="deleted"></div>
+                        </div>
+                        <div class="mb-2">
+                            <h6>Cantidad de archivos ignorados</h6>
+                            <div id="skipped"></div>
+                        </div>
                         <button class="btn btn-primary" onclick="navigate('/')">Regresar</button>
                     </div>
                 </div>
