--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,7 +14,7 @@
                     <a class="nav-link toggle-text" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link toggle-text" href="#">MiniBuster</a>
+                    <a class="nav-link toggle-text" href="https://daireto.github.io/MiniBuster/">MiniBuster</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link toggle-text" href="https://github.com/Daireto/MiniBuster">Github</a>
